crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__babybuddy__core__templatetags__misc.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/babybuddy/core/templatetags/misc.py
---
tag_rules: {}
filter_arities:
  "core.templatetags.misc::filter::next":
    expects_arg: true
    arg_optional: false
  "core.templatetags.misc::filter::prev":
    expects_arg: true
    arg_optional: false
block_specs: {}
