crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__babybuddy__core__templatetags__timers.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/babybuddy/core/templatetags/timers.py
---
tag_rules:
  "core.templatetags.timers::tag::instance_add_url":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: url_name
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "core.templatetags.timers::tag::quick_timer_nav":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
  "core.templatetags.timers::tag::timer_nav":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
filter_arities: {}
block_specs: {}
